--- a/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
+++ b/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
@@ -17,7 +17,7 @@
     <PackageProjectUrl>https://github.com/MelbourneDeveloper/CryptoCurrency.Net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/MelbourneDeveloper/CryptoCurrency.Net</RepositoryUrl>
     <PackageTags>C#, REST, UWP , Android, iOS, Hardfolio, cryptocurrency, Bitcoin, Ethereum, Blockchain, Bitfinex, Bittrex, Cryptopia, Crypto Compare, Binance</PackageTags>
-    <Description>Cross platform C# library for general Crypto Currency functionality, and communicating with Exchange, and Blockchain APIs.</Description>
+    <Description>Cross platform C# library for general Crypto Currency functionality, and communicating with Cryptocurrency exchanges, and Blockchain APIs.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
