--- a/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
+++ b/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -15,9 +15,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="a\DummyEthereumTransaction.cs" />
+    <Compile Remove="a\DummySignedEthereumTransaction.cs" />
+    <Compile Remove="a\KeepKeyUnitTests.cs" />
+    <Compile Remove="a\LedgerDotNetApiTests.cs" />
+    <Compile Remove="a\LedgerDotNetApiWrapper.cs" />
+    <Compile Remove="a\LedgerDotNetTests.cs" />
+    <Compile Remove="a\TrezorUnitTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
