--- a/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
+++ b/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
@@ -20,7 +20,7 @@
     <Description>Cross platform C# library for general Crypto Currency functionality, and communicating with Cryptocurrency exchanges, Hardwarewallets and Blockchain APIs.</Description>
     <NoWarn>1701;1702;CS0659;CA2007;CA1063;CA2235</NoWarn>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <PackageReleaseNotes>Various Blockchain API stability fixes. Address derivation. Code cleanup.</PackageReleaseNotes>
+    <PackageReleaseNotes>Various Blockchain API stability fixes. Address derivation. Code cleanup. BCH legacy address conversion</PackageReleaseNotes>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <SignAssembly>true</SignAssembly>
     <DelaySign>false</DelaySign>
