--- a/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
+++ b/src/CryptoCurrency.Net/CryptoCurrency.Net.csproj
@@ -39,11 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Abstractions\IEthereumTransaction.cs" />
-    <Compile Remove="Abstractions\ISignedEthereumTransaction.cs" />
-    <Compile Remove="Abstractions\ISignedTransaction.cs" />
-    <Compile Remove="Abstractions\ITransaction.cs" />
-    <Compile Remove="Abstractions\ITransactionSigner.cs" />
     <Compile Remove="APIClients\CoinspotClient.cs" />
     <Compile Remove="APIClients\CryptopiaClient.cs" />
     <Compile Remove="ConsoleAppIsolatedStoragePersister.cs" />
@@ -69,6 +64,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CryptoCurrency.Net.Base\CryptoCurrency.Net.Base.csproj" />
   </ItemGroup>
 
 
