--- a/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
+++ b/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/MelbourneDeveloper/CryptoCurrency.Net</RepositoryUrl>
     <PackageTags>C#, REST, UWP , Android, iOS, Hardfolio, cryptocurrency, Bitcoin, Ethereum, Blockchain, Bitfinex, Bittrex, Cryptopia, Crypto Compare, Binance, Ethereum Classic, Litecoin, Hardwarewallets</PackageTags>
     <PackageReleaseNotes>Moved from Hardwarewallets.Net (https://github.com/MelbourneDeveloper/Hardwarewallets.Net)</PackageReleaseNotes>
+    <NoWarn>1701;1702;CS0659;CA2007;CA1063;CA2235</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -34,6 +35,7 @@
     <Compile Remove="Abstractions\ISignedTransaction.cs" />
     <Compile Remove="Abstractions\ITransaction.cs" />
     <Compile Remove="Abstractions\ITransactionSigner.cs" />
+    <None Include="..\CryptoCurrency.Net\CodeRules.ruleset" Link="CodeRules.ruleset" />
     <None Include="..\CryptoCurrency.Net\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
