--- a/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
+++ b/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
@@ -8,7 +8,7 @@
     <Version>2.0.0</Version>
     <Authors>Christian Findlay</Authors>
     <Company>Christian Findlay</Company>
-    <Description>Cross platform C# library for general Crypto Currency functionality such as communicating with Cryptocurrency exchanges, Hardwarewallets and Blockchain APIs.</Description>
+    <Description>Base cross platform C# library for general Crypto Currency functionality such as communicating with Cryptocurrency exchanges, Hardwarewallets and Blockchain APIs. See CryptoCurrency.Net for implementations</Description>
     <Copyright>© 2019 Christian Findlay</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/MelbourneDeveloper/CryptoCurrency.Net</PackageProjectUrl>
