--- a/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
+++ b/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
