--- a/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
+++ b/src/CryptoCurrency.Net.Base/CryptoCurrency.Net.Base.csproj
@@ -1,8 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0</TargetFrameworks>
-		<CodeAnalysisRuleSet>../CryptoCurrency.Net/CodeRules.ruleset</CodeAnalysisRuleSet>
+		<TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+		<CodeAnalysisRuleSet></CodeAnalysisRuleSet>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
 		<Version>2.0.0</Version>
@@ -19,28 +19,16 @@
 		<LangVersion>9</LangVersion>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-		<DefineConstants>RELEASE</DefineConstants>
-		<AssemblyOriginatorKeyFile>../CryptoCurrency.Net/CryptoCurrencyNet.pfx</AssemblyOriginatorKeyFile>
-		<SignAssembly>true</SignAssembly>
-		<DelaySign>false</DelaySign>
-	</PropertyGroup>
-
 	<ItemGroup>
 		<Compile Remove="Abstractions\IEthereumTransaction.cs" />
 		<Compile Remove="Abstractions\ISignedEthereumTransaction.cs" />
 		<Compile Remove="Abstractions\ISignedTransaction.cs" />
 		<Compile Remove="Abstractions\ITransaction.cs" />
 		<Compile Remove="Abstractions\ITransactionSigner.cs" />
-		<None Include="..\CryptoCurrency.Net\CodeRules.ruleset" Link="CodeRules.ruleset" />
-		<None Include="..\CryptoCurrency.Net\LICENSE">
-			<Pack>True</Pack>
-			<PackagePath></PackagePath>
-		</None>
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="RestClient.Net.Abstractions" Version="4.1.0" />
+		<PackageReference Include="RestClient.Net.Abstractions" Version="5.0.4-beta" />
 	</ItemGroup>
 
 </Project>
