--- a/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
+++ b/src/CryptoCurrency.Net.UnitTests/CryptoCurrency.Net.UnitTests.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="RestClient.Net" Version="4.1.0" />
+    <PackageReference Include="RestClient.Net" Version="5.0.5-beta" />
     <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
